# inference-api

./: MANIFEST.in  README.md  api.py  bombard.json  model.py  model_simple.py  prelim.txt  process_functions.py  pyproject.toml  requirements.txt  scheduler.py  tester.py  texts.txt
evaluation/: analysis.ipynb  corpus.txt  corpus2.txt  memory_tester.py
example/: api.py  e5.py  jina_api.py  jina_clip.py  model.py  run_model.py  settings.py  simple_model.py
lib/: __init__.py  api.py  api_models.py  logging.py  memory_limiter.py  metrics.py  model.py  process_functions.py  scheduler.py  settings.py  utils.py
