[build-system]
requires = ["setuptools",  "setuptools_scm>=8"]
build-backend = "setuptools.build_meta" 

[project]
dynamic = ["version"]
name = "inference_api"
description = "Package to ensure consistent APIs"
requires-python = ">=3.8"
dependencies = [
  "fastapi==0.111.0",
  "prometheus-fastapi-instrumentator==7.0.0",
  "typed-settings==24.3.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'inference_api' = ['inference_api/*']

[tool.setuptools_scm]
write_to = "inference_api/__version__.py"